--- a/MSTree_holder.html
+++ b/MSTree_holder.html
@@ -71,7 +71,7 @@
 
 <div id='sidebar'>
 	<div>
-		<a class='show-tooltip' title="EnteroBase" href="https://enterobase.warwick.ac.uk" target = '_blank'><img src="static/js/img/enterobase.png" alt="Enterobase" style="width:40px;height:45px;"></a>&nbsp;&nbsp;|&nbsp;&nbsp;
+		<!--<a class='show-tooltip' title="EnteroBase" href="https://enterobase.warwick.ac.uk" target = '_blank'><img src="static/js/img/enterobase.png" alt="Enterobase" style="width:40px;height:45px;"></a>&nbsp;&nbsp;|&nbsp;&nbsp;-->
 		<a class='show-tooltip' title='GrapeTree GitHub repository' href="https://github.com/achtman-lab/GrapeTree" target = '_blank'><img src="static/js/img/GrapeTree.PNG" alt="GrapeTree" style="width:40px;height:50px;"></a>&nbsp;&nbsp;|&nbsp;&nbsp;
 		<a class='show-tooltip' title='Help' href="http://enterobase.readthedocs.io/en/latest/grapetree/grapetree-about.html" target = '_blank'><span class="glyphicon glyphicon-question-sign" style="font-size:30px;height:50px;margin-right:5px;top:10px"></span></a>
 		<h3 id="headertag" style="font-family: times, serif; font-size:12pt; font-style:italic">GrapeTree</h3>
